# assimilate

./: .bump.cfg.nt  .coveragerc  README.rst  bu  clean  pyproject.toml  site-customize.py  tox.ini
.github/workflows/: build.yaml
assimilate/: __init__.py  assimilate.py  collection.py  command.py  configs.py  help.py  hooks.py  main.py  overdue.py  patterns.py  preferences.py  shlib.py  utilities.py
doc/: Makefile  accessories.rst  api.rst  commands.rst  conf.py  configuring.rst  examples.rst  index.rst  installing.rst  links.rst  migrating.rst  monitoring.rst  releases.rst
tests/: README  assimilate.nt  run-only.nt  test_assimilate.py
