[project]
name = "assimilate"
version = "0.0b13"
description = "Front end for BorgBackup version 2."
readme = "README.rst"
keywords = ["assimilate", "emborg", "borg", "borgmatic", "vorta", "backups"]
authors = [
    {name = "Ken Kundert"},
    {email = "assimilate@nurdletech.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
requires-python = ">=3.6"
dependencies = [
    "appdirs",
    "arrow>=1.3",
    "docopt",
    "inform>=1.36",
    "nestedtext",
    "ntlog",
    "quantiphy",
    "requests",
    "voluptuous",
]

[project.optional-dependencies]
avendesora = [
    'avendesora',
]

[project.scripts]
assimilate = "assimilate.main:main"

[project.urls]
homepage = "https://assimilate.readthedocs.io"
documentation = "https://assimilate.readthedocs.io"
repository = "https://github.com/kenkundert/assimilate"
changelog = "https://github.com/KenKundert/assimilate/blob/master/doc/releases.rst"

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
addopts = "--tb=short"

[tool.ruff]
exclude = [".tox", "doc"]

[tool.ruff.lint]
select = ["F"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"assimilate/__init__.py" = ["F401"]
"assimilate/assimilate.py" = ["F401"]
"assimilate/utilities.py" = ["F401"]
